# http-api-rs

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yaml  openapi.yaml  package.json  render.yaml
.github/workflows/: CI.yaml
ci/: index.mjs
ci/init/: pg_init.sh
config/env/: .env.example  .env.jaeger.example  .env.postgres.example
config/oauth/: test_private.pem
src/: app.rs  main.rs  server.rs  settings.rs  telemetry.rs
src/contexts/: mod.rs
src/contexts/ecommerce/: mod.rs  settings.rs
src/contexts/ecommerce/backoffice/application/usecases/: get_products.rs  save_product.rs
src/contexts/ecommerce/backoffice/domain/product/: currency.rs  id.rs  mod.rs  name.rs  price.rs  repository.rs  timestamp.rs
src/contexts/ecommerce/backoffice/infrastructure/: controller.rs  mod.rs
src/contexts/ecommerce/backoffice/infrastructure/extensions/: mod.rs  product.rs
src/contexts/ecommerce/backoffice/infrastructure/graphql/: handlers.rs  mod.rs  objects.rs  product.rs  query.rs
src/contexts/ecommerce/common/domain/: error.rs  errors.rs  mod.rs  permissions.rs
src/contexts/ecommerce/common/infrastructure/: controller.rs  dependency_container.rs  mod.rs
src/libs/: mod.rs
src/libs/pg/: mod.rs
src/libs/postgres/: errcodes.rs  mod.rs
src/libs/problem_details/: mod.rs
src/libs/problemdet/: mod.rs
src/libs/random/: mod.rs
static/env/: .env.swagger.example
static/environment/: .env.postgres.example  .env.swagger.example
static/oauth2/: jwks_from_public_pem.json  test_public.pem
tools/scripts/: pg_init.sh  swagger_init.sh
(+17 files in other folders)
