[package]
name = "api"
version = "0.1.0"
edition = "2021"
rust-version = "1.72.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["tower-log", "headers"] }
chrono = { version = "0.4.24", features = ["serde"] }
derive_more = { version = "0.99.17", features = ["display"] }
dotenv = "0.15.0"
futures = "0.3.28"
hyper = { version = "0.14.26", features = ["full"] }
jsonwebtoken = "8.3.0"
mime = "0.3.17"
opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.12.0"
opentelemetry-semantic-conventions = "0.11.0"
rand = "0.8.5"
reqwest = "0.11.18"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["preserve_order"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
tokio = { version = "1.28.0", features = ["full"] }
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.4.0", features = ["trace", "cors", "compression-full", "limit", "timeout"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.19.0"
tracing-panic = "0.1.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-tree = "0.2.3"
url = "2.3.1"
uuid = { version = "1.3.2", features = ["serde", "v4"] }
